retrained all models

--- a/Supervised Machine Learning.ipynb
+++ b/Supervised Machine Learning.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,9 +75,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Library/Frameworks/Python.framework/Versions/3.6/lib/python3.6/site-packages/sklearn/ensemble/weight_boosting.py:29: DeprecationWarning: numpy.core.umath_tests is an internal NumPy module and should not be imported. It will be removed in a future NumPy release.\n",
+      "  from numpy.core.umath_tests import inner1d\n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.svm import SVC\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
@@ -88,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -199,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -259,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -268,9 +277,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Random Forest: Completed in 1.5711941719055176 seconds\n",
+      "Random Forest Accuracy: 0.6109188773548635\n",
+      "Random Forest ROC AUC Score: 0.6154967109973033\n",
+      "Random Forest F Score: 0.6651224354731965\n",
+      "Random Forest Precision: 0.5726495726495726\n",
+      "Random Forest Recall: 0.7932123125493291\n",
+      " \n",
+      "Logistic Regression: Completed in 0.3475041389465332 seconds\n",
+      "Logistic Regression Accuracy: 0.6351403306420608\n",
+      "Logistic Regression ROC AUC Score: 0.6361170243607478\n",
+      "Logistic Regression F Score: 0.6428302596913812\n",
+      "Logistic Regression Precision: 0.6143884892086331\n",
+      "Logistic Regression Recall: 0.6740331491712708\n",
+      " \n",
+      "SVM: Completed in 171.74720120429993 seconds\n",
+      "SVM Accuracy: 0.6312956555171088\n",
+      "SVM ROC AUC Score: 0.621745165302116\n",
+      "SVM F Score: 0.3987460815047022\n",
+      "SVM Precision: 0.9695121951219512\n",
+      "SVM Recall: 0.2509865824782952\n",
+      " \n"
+     ]
+    }
+   ],
    "source": [
     "x_rtfidf, y_rtfidf = evaluate(rtfidf_clf, clf_names, train_rtfidf, test_rtfidf)"
    ]
@@ -284,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -293,9 +330,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Random Forest: Completed in 1.3853070735931396 seconds\n",
+      "Random Forest Accuracy: 0.6974240676662822\n",
+      "Random Forest ROC AUC Score: 0.6969952277215773\n",
+      "Random Forest F Score: 0.6865790521704499\n",
+      "Random Forest Precision: 0.6929260450160771\n",
+      "Random Forest Recall: 0.6803472770323599\n",
+      " \n",
+      "Logistic Regression: Completed in 0.4902491569519043 seconds\n",
+      "Logistic Regression Accuracy: 0.6981930026912726\n",
+      "Logistic Regression ROC AUC Score: 0.6974079061495299\n",
+      "Logistic Regression F Score: 0.6828282828282828\n",
+      "Logistic Regression Precision: 0.6995033112582781\n",
+      "Logistic Regression Recall: 0.6669297553275454\n",
+      " \n",
+      "SVM: Completed in 105.41624212265015 seconds\n",
+      "SVM Accuracy: 0.7370242214532872\n",
+      "SVM ROC AUC Score: 0.7341540358471119\n",
+      "SVM F Score: 0.6976127320954907\n",
+      "SVM Precision: 0.792964824120603\n",
+      "SVM Recall: 0.6227308602999211\n",
+      " \n"
+     ]
+    }
+   ],
    "source": [
     "x_runi, y_runi = evaluate(runi_clf, clf_names, train_runi, test_runi)"
    ]
@@ -309,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -318,9 +383,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Random Forest: Completed in 2.163566827774048 seconds\n",
+      "Random Forest Accuracy: 0.6662821991541714\n",
+      "Random Forest ROC AUC Score: 0.6663975628602432\n",
+      "Random Forest F Score: 0.661993769470405\n",
+      "Random Forest Precision: 0.6533435818601077\n",
+      "Random Forest Recall: 0.6708760852407262\n",
+      " \n",
+      "Logistic Regression: Completed in 1.2324132919311523 seconds\n",
+      "Logistic Regression Accuracy: 0.6720492118415994\n",
+      "Logistic Regression ROC AUC Score: 0.6715440622230321\n",
+      "Logistic Regression F Score: 0.6594810379241516\n",
+      "Logistic Regression Precision: 0.6672051696284329\n",
+      "Logistic Regression Recall: 0.6519337016574586\n",
+      " \n",
+      "SVM: Completed in 266.23683619499207 seconds\n",
+      "SVM Accuracy: 0.6916570549788543\n",
+      "SVM ROC AUC Score: 0.6865170414003732\n",
+      "SVM F Score: 0.606090373280943\n",
+      "SVM Precision: 0.8023407022106632\n",
+      "SVM Recall: 0.48697711128650356\n",
+      " \n"
+     ]
+    }
+   ],
    "source": [
     "x_rbig, y_rbig = evaluate(rbig_clf, clf_names, train_rbig, test_rbig)"
    ]
@@ -334,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -343,9 +436,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Random Forest: Completed in 0.3986940383911133 seconds\n",
+      "Random Forest Accuracy: 0.5974625144175317\n",
+      "Random Forest ROC AUC Score: 0.6004358712514303\n",
+      "Random Forest F Score: 0.6340440405452639\n",
+      "Random Forest Precision: 0.56900878293601\n",
+      "Random Forest Recall: 0.7158642462509865\n",
+      " \n",
+      "Logistic Regression: Completed in 0.24937009811401367 seconds\n",
+      "Logistic Regression Accuracy: 0.5797770088427527\n",
+      "Logistic Regression ROC AUC Score: 0.5806574810463749\n",
+      "Logistic Regression F Score: 0.5877027536778575\n",
+      "Logistic Regression Precision: 0.5628612716763006\n",
+      "Logistic Regression Recall: 0.6148382004735596\n",
+      " \n",
+      "SVM: Completed in 102.85331630706787 seconds\n",
+      "SVM Accuracy: 0.5786236063052672\n",
+      "SVM ROC AUC Score: 0.5783438194083701\n",
+      "SVM F Score: 0.5674822415153907\n",
+      "SVM Precision: 0.5674822415153907\n",
+      "SVM Recall: 0.5674822415153907\n",
+      " \n"
+     ]
+    }
+   ],
    "source": [
     "x_vec, y_vec = evaluate(vec_clf, clf_names, train_word2vec, test_word2vec)"
    ]
@@ -359,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -368,9 +489,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Random Forest: Completed in 10.230072021484375 seconds\n",
+      "Random Forest Accuracy: 0.9042675893886967\n",
+      "Random Forest ROC AUC Score: 0.9031634537900742\n",
+      "Random Forest F Score: 0.8974886784685056\n",
+      "Random Forest Precision: 0.9380378657487092\n",
+      "Random Forest Recall: 0.8602999210734017\n",
+      " \n",
+      "Logistic Regression: Completed in 0.16809797286987305 seconds\n",
+      "Logistic Regression Accuracy: 0.9081122645136486\n",
+      "Logistic Regression ROC AUC Score: 0.9066539145581115\n",
+      "Logistic Regression F Score: 0.9001253656498119\n",
+      "Logistic Regression Precision: 0.9564831261101243\n",
+      "Logistic Regression Recall: 0.8500394632991318\n",
+      " \n",
+      "Naive Bayes: Completed in 0.2786829471588135 seconds\n",
+      "Naive Bayes Accuracy: 0.8565936178392926\n",
+      "Naive Bayes ROC AUC Score: 0.8566470513756539\n",
+      "Naive Bayes F Score: 0.8536681051392702\n",
+      "Naive Bayes Precision: 0.8486739469578783\n",
+      "Naive Bayes Recall: 0.8587213891081295\n",
+      " \n"
+     ]
+    }
+   ],
    "source": [
     "x_tfidf, y_tfidf = evaluate(tfidf_clf, clf_names, train_tfidf, test_tfidf)"
    ]
@@ -384,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -393,9 +542,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Random Forest: Completed in 8.68398904800415 seconds\n",
+      "Random Forest Accuracy: 0.9023452518262207\n",
+      "Random Forest ROC AUC Score: 0.9017452599667019\n",
+      "Random Forest F Score: 0.8975806451612904\n",
+      "Random Forest Precision: 0.9175597691673537\n",
+      "Random Forest Recall: 0.8784530386740331\n",
+      " \n",
+      "Logistic Regression: Completed in 0.8870952129364014 seconds\n",
+      "Logistic Regression Accuracy: 0.9158016147635525\n",
+      "Logistic Regression ROC AUC Score: 0.9147844191558522\n",
+      "Logistic Regression F Score: 0.9101354123922856\n",
+      "Logistic Regression Precision: 0.9478632478632478\n",
+      "Logistic Regression Recall: 0.8752959747434885\n",
+      " \n",
+      "Naive Bayes: Completed in 0.8655989170074463 seconds\n",
+      "Naive Bayes Accuracy: 0.8673587081891581\n",
+      "Naive Bayes ROC AUC Score: 0.8676571343373302\n",
+      "Naive Bayes F Score: 0.8659152739992227\n",
+      "Naive Bayes Precision: 0.8529862174578867\n",
+      "Naive Bayes Recall: 0.8792423046566693\n",
+      " \n"
+     ]
+    }
+   ],
    "source": [
     "x_uni, y_uni = evaluate(uni_clf, clf_names, train_uni, test_uni)"
    ]
@@ -409,7 +586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -418,9 +595,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Random Forest: Completed in 60.024255990982056 seconds\n",
+      "Random Forest Accuracy: 0.8900422914263745\n",
+      "Random Forest ROC AUC Score: 0.8884827515208458\n",
+      "Random Forest F Score: 0.8800335570469798\n",
+      "Random Forest Precision: 0.9391226499552372\n",
+      "Random Forest Recall: 0.8279400157853196\n",
+      " \n",
+      "Logistic Regression: Completed in 17.185407161712646 seconds\n",
+      "Logistic Regression Accuracy: 0.9142637447135717\n",
+      "Logistic Regression ROC AUC Score: 0.913186066792965\n",
+      "Logistic Regression F Score: 0.9082682023858494\n",
+      "Logistic Regression Precision: 0.9484536082474226\n",
+      "Logistic Regression Recall: 0.8713496448303079\n",
+      " \n",
+      "Naive Bayes: Completed in 20.337838172912598 seconds\n",
+      "Naive Bayes Accuracy: 0.8777393310265282\n",
+      "Naive Bayes ROC AUC Score: 0.8779158171506195\n",
+      "Naive Bayes F Score: 0.87578125\n",
+      "Naive Bayes Precision: 0.8669760247486465\n",
+      "Naive Bayes Recall: 0.8847671665351223\n",
+      " \n"
+     ]
+    }
+   ],
    "source": [
     "x_big, y_big = evaluate(big_clf, clf_names, train_big, test_big)"
    ]
@@ -434,7 +639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -443,7 +648,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -454,7 +659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -477,7 +682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -499,7 +704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
