--- a/Unsupervised Machine Learning .ipynb
+++ b/Unsupervised Machine Learning .ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,16 +78,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_word2vec, test_word2vec = loadData('word2vec')"
+    "train_vec, test_vec = loadData('word2vec')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,18 +238,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training Time: 0.5228478908538818\n"
+     ]
+    }
+   ],
    "source": [
     "k_runi = kCluster(train_runi)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Neutral Cluster = 0: 0.29910044977511246\n",
+      "Hate Cluster = 1:    0.8571428571428571\n",
+      " \n",
+      "Neutral Cluster = 1: 0.7008995502248876\n",
+      "Hate Cluster = 0:    0.14285714285714285\n"
+     ]
+    }
+   ],
    "source": [
     "evaluateCluster(k_runi, test_runi)"
    ]
@@ -263,18 +283,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training Time: 1.2798261642456055\n"
+     ]
+    }
+   ],
    "source": [
     "k_rbig = kCluster(train_rbig)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Neutral Cluster = 0: 0.7008995502248876\n",
+      "Hate Cluster = 1:    0.14285714285714285\n",
+      " \n",
+      "Neutral Cluster = 1: 0.29910044977511246\n",
+      "Hate Cluster = 0:    0.8571428571428571\n"
+     ]
+    }
+   ],
    "source": [
     "evaluateCluster(k_rbig, test_rbig)"
    ]
@@ -288,18 +328,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training Time: 0.7897310256958008\n"
+     ]
+    }
+   ],
    "source": [
     "k_rtfidf = kCluster(train_rtfidf)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Neutral Cluster = 0: 0.9985007496251874\n",
+      "Hate Cluster = 1:    0.27387529597474347\n",
+      " \n",
+      "Neutral Cluster = 1: 0.0014992503748125937\n",
+      "Hate Cluster = 0:    0.7261247040252565\n"
+     ]
+    }
+   ],
    "source": [
     "evaluateCluster(k_rtfidf, test_rtfidf)"
    ]
@@ -313,18 +373,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training Time: 0.2651479244232178\n"
+     ]
+    }
+   ],
    "source": [
     "k_vec = kCluster(train_vec)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Neutral Cluster = 0: 0.37181409295352325\n",
+      "Hate Cluster = 1:    0.5240726124704025\n",
+      " \n",
+      "Neutral Cluster = 1: 0.6281859070464768\n",
+      "Hate Cluster = 0:    0.47592738752959746\n"
+     ]
+    }
+   ],
    "source": [
     "evaluateCluster(k_vec, test_vec)"
    ]
@@ -338,18 +418,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training Time: 33.48102378845215\n"
+     ]
+    }
+   ],
    "source": [
     "k_uni = kCluster(train_uni)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Neutral Cluster = 0: 0.2983508245877061\n",
+      "Hate Cluster = 1:    0.856353591160221\n",
+      " \n",
+      "Neutral Cluster = 1: 0.7016491754122939\n",
+      "Hate Cluster = 0:    0.143646408839779\n"
+     ]
+    }
+   ],
    "source": [
     "evaluateCluster(k_uni, test_uni)"
    ]
@@ -363,18 +463,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training Time: 1074.6983239650726\n"
+     ]
+    }
+   ],
    "source": [
     "k_big = kCluster(train_big)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Neutral Cluster = 0: 0.7016491754122939\n",
+      "Hate Cluster = 1:    0.143646408839779\n",
+      " \n",
+      "Neutral Cluster = 1: 0.2983508245877061\n",
+      "Hate Cluster = 0:    0.856353591160221\n"
+     ]
+    }
+   ],
    "source": [
     "evaluateCluster(k_big, test_big)"
    ]
@@ -388,18 +508,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training Time: 43.230924129486084\n"
+     ]
+    }
+   ],
    "source": [
     "k_tfidf = kCluster(train_tfidf)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Neutral Cluster = 0: 0.9977511244377811\n",
+      "Hate Cluster = 1:    0.21310181531176006\n",
+      " \n",
+      "Neutral Cluster = 1: 0.0022488755622188904\n",
+      "Hate Cluster = 0:    0.7868981846882399\n"
+     ]
+    }
+   ],
    "source": [
     "evaluateCluster(k_tfidf, test_tfidf)"
    ]
